--- a/todolist/style.css
+++ b/todolist/style.css
@@ -23,8 +23,18 @@ html, body {
   position: fixed;
   z-index: 1;
   top: 100;
-  overflow-x: hidden;
+  overflow-y: auto;
   padding-top: 20px;
+
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 2px;
 }
 
 .left {
@@ -58,29 +68,12 @@ li, h3 {
   clear:both;
   list-style:none;
 }
-.button {
-  background-color:#F5DEB3;
-  border-radius: 50px ;
-  height: 100px ;
-  width: 100px ;
-  border: none;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 50px;
-  margin: 4px 4px;
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-}
 
 /* Heading */
 h1 {
   color: #A8A8A8;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 30px;
   /*border-bottom: 2px solid #A8A8A8;*/
   padding: 30px 0 10px;
   margin: 10px;
@@ -91,7 +84,7 @@ h3 {
   color: white;
   font-weight: 700;
   font-size: 20px;
-  padding: 30px 0 10px;
+  padding: 10px 0 0;
   margin: 2%;
   text-transform: uppercase;
 }
@@ -101,10 +94,10 @@ input[id="add-task"] {
   line-height: 15px;
   padding-left: 10;
   height: 40px;
-  width: 60%;
-  border: 0.5px solid #ddd;
+  width: 70%;
+  border: 0.1px solid #686868;
   border-radius: 5px;
-  background: #888;
+  background: #505050;
   font-family: Lato, sans-serif;
   color: white;
 }
@@ -153,33 +146,17 @@ input[type="checkbox"]:checked:after {
 
 /* Task list */
 li {
-  overflow: hidden;
+  overflow-y: hidden;
   padding: 10px 0;
   border-bottom: 1px solid #333;
   margin: 3%;
   margin-right: 5%;
 }
-/*
-li > input[type="checkbox"] {
-  cursor: pointer;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: 0;
-  background: #111;
-  height: 16px;
-  width: 16px;
-  border: 1px solid #888;
-  border-radius: 5px ;
 
-}
-li input[type="checkbox"]:checked {
-  background: #888;
-}*/
 li > label {
   color: white;
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 15px;
+  line-height: 20px;
   width: 200px;
   padding: 0 0 0 11px;
 }
@@ -191,12 +168,15 @@ li >  input[type="text"] {
 h3[id="completed"]{
   color: #666666;
 }
+.completed-tasks{
+  margin-bottom: 20%;
+}
 
-#completed-tasks label {
+.completed-tasks label {
   text-decoration: line-through;
   color: #666666;
-}
-#completed-tasks input[type="checkbox"]:checked {
+ }
+.completed-tasks input[type="checkbox"]:checked {
   background: #666666;
 }
 
