--- a/todolist/style.css
+++ b/todolist/style.css
@@ -3,6 +3,7 @@ body {
   background: #fff;
   color: #333;
   font-family: Lato, sans-serif;
+  overflow-y: auto;
 }
 html, body {
   margin: 0px;
@@ -41,6 +42,7 @@ html, body {
   left: 0;
   width: 60%;
   background-color: #111;
+  overflow-y: auto;
 }
 
 .right {
@@ -146,18 +148,21 @@ input[type="checkbox"]:checked:after {
 
 /* Task list */
 li {
-  overflow-y: hidden;
+  overflow-y: auto;
   padding: 10px 0;
   border-bottom: 1px solid #333;
   margin: 3%;
   margin-right: 5%;
+  color: white;
+  font-size: 15px;
+
 }
 
 li > label {
   color: white;
   font-size: 15px;
   line-height: 20px;
-  width: 200px;
+  width: 80%;
   padding: 0 0 0 11px;
 }
 li >  input[type="text"] {
@@ -196,13 +201,14 @@ ul li.editMode label {
 
 /* Style the close button */
 .close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
+  color: #666666;
+  font-size: 15px;
+  line-height: 20px;
+  padding: 0 0 0 11px;
+  margin-left: 5%;
 }
 
 .close:hover {
-  background-color: #f44336;
+  
   color: white;
 }
